--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://ajency.github.io/ccir-report/"
 languageCode = "en-us"
-title = "CIBIL Agri Report"
+title = "CCIR Report"
 theme = "ink"
 publishDir = "docs"
